--- a/src/components/LeftSection/LeftSideSection.css
+++ b/src/components/LeftSection/LeftSideSection.css
@@ -1,11 +1,11 @@
 .left-section{
     height: 100vh;
-    /* width: 180; */
+    /* width: 180px; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 20px 0;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     transition: all 0.3s ease;
 }
@@ -22,6 +22,7 @@
 }
 
 .left-section .logo p{
+    padding-right: 10px;
     font-weight: 500;
     color: #464646;
 }
